--- a/qr-code-component-main/index.html
+++ b/qr-code-component-main/index.html
@@ -5,24 +5,66 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+
   <title>Frontend Mentor | QR code component</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    .attribution { font-size: 11px; text-align: center; }
+  @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap');
+
+  .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
+    body {
+      width: 100%;
+      background-color: hsl(212, 45%, 89%);
+      font-family: 'Outfit', sans-serif;
+    }
+    .container {
+      width: 300px;
+      margin: 100px auto;
+      padding: 10px;
+      border-radius: 10px;
+      background-color: hsl(0, 0%, 100%);
+    }
+    .content-center {
+      display: flex;
+      flex-direction: column;
+      text-align: center;
+    }
+    #qrcode-img {
+      width: 100%;
+      border-radius: 10px;
+    }
+
+    h4 {
+      color: hsl(218, 44%, 22%);
+      font-weight: 700;
+    }
+
+    p {
+      font-size: 15px;
+      color: hsl(220, 15%, 55%);
+      margin-top: 0;
+      padding: 0px 20px;
+      font-weight: 400;
+    }
   </style>
 </head>
 <body>
 
-  Improve your front-end skills by building projects
+  <div class="container">
+    <div class="content-center">
+      <div id="qrcode-box">
+        <img src="./images/image-qr-code.png" alt="QR Code" id="qrcode-img">
+      </div>
+      <h2>Improve your front-end skills by building projects</h2>
+      <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+    </div>
+  </div>
 
-  Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
-  
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+    Coded by <a href="#">Anne-Perrine</a>.
   </div>
 </body>
 </html>
