maj index frontendmentor

--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
     <div class="content-center">
       <h2>Exercices</h2>
       <p><a href="/qr-code-component-main/index.html">QR Code</a></p>
+      <p><a href="/social-links-profile-main/">Social links profile</a></p>
     </div>
   </div>
 </body>
