--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
   <div class="container">
     <div class="content-center">
       <h2>Exercices</h2>
-      <p><a href="/qr-code-component-main/index.html">QR Code</a></p>
-      <p><a href="/social-links-profile-main/">Social links profile</a></p>
+      <p><a href="./qr-code-component-main/index.html">QR Code</a></p>
+      <p><a href="./social-links-profile-main/">Social links profile</a></p>
     </div>
   </div>
 </body>
