exos links index fixed

--- a/index.html
+++ b/index.html
@@ -50,6 +50,10 @@
       font-weight: 400;
     }
 
+    a {
+      text-decoration: none;
+      color: hsl(220, 15%, 55%);}
+
     @media only screen and (max-width: 375px) {
       .container {
         width: 70%;
@@ -79,7 +83,7 @@
     <div class="content-center">
       <h2>Exercices</h2>
       <p><a href="./qr-code-component-main/index.html">QR Code</a></p>
-      <p><a href="./social-links-profile-main/">Social links profile</a></p>
+      <p><a href="./social-links-profile-main/index.html">Social links profile</a></p>
     </div>
   </div>
 </body>
